# neurasp-crafting

./: .gitignore  README.md  app.py  config.py  dataset.py  datasets.py  generate-dataset.py  generate-program.py  generate-sprites.py  network.py  pyproject.toml  select-sprites.py  selection.yml  showcase.ipynb  strips.yml  test-network.py  test-neurasp.py  train-network.py  train-neurasp.py  train.py  train_neurasp.py  utils.py
neurasp/: __init__.py  mvpp.py  neurasp.py
strips/: encoding.lp  instance.lp
